force-app/main/default/objects/Option_Approval_Request__c/Option_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Option Approval Request</label>
    <nameField>
        <displayFormat>1{000}</displayFormat>
        <label>OAR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Option Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>