force-app/main/default/objects/Option_Approval_Request__c/fields/Alternative__c.field-meta.xml
<CustomField>
    <fullName>Alternative__c</fullName>
    <label>Alternative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>