force-app/main/default/objects/Option_Approval_Request__c/fields/Alternativep__c.field-meta.xml
<CustomField>
    <fullName>Alternativep__c</fullName>
    <label>Alternative</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>