force-app/main/default/objects/Option_Approval_Request__c/fields/Build_Date__c.field-meta.xml
<CustomField>
    <fullName>Build_Date__c</fullName>
    <formula>if(Sales_Order__c =null, Opportunity_Line__r.Start_Date__c , Sales_Order__r.Start_Date__c )</formula>
    <label>Build Date</label>
    <type>Date</type>
</CustomField>