force-app/main/default/objects/Option_Approval_Request__c/fields/Build_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Build_Quantity__c</fullName>
    <formula>if(Sales_Order__c=null, Opportunity_Line__r.Quantity__c , Sales_Order__r.Quantity__c )</formula>
    <label>Build Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>