force-app/main/default/objects/Option_Approval_Request__c/fields/Buy_Design_Section__c.field-meta.xml
<CustomField>
    <fullName>Buy_Design_Section__c</fullName>
    <label>Buy Design Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buy_Design_Section</valueSetName>
    </valueSet>
</CustomField>