force-app/main/default/objects/Option_Approval_Request__c/fields/Complete_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Status_Date__c</fullName>
    <description>The autofilled date when status changes to approve or disapprove or canceled or see details or conditional or deferred from flow</description>
    <inlineHelpText>The autofilled date when status changes to approve or disapprove or canceled or see details or conditional or deferred</inlineHelpText>
    <label>Complete Status Date</label>
    <type>Date</type>
</CustomField>