force-app/main/default/objects/Option_Approval_Request__c/fields/Compliance_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>