force-app/main/default/objects/Option_Approval_Request__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>if( Sales_Order__c =null, Opportunity_Line__r.Opportunity_Line__r.Account.Internal_Name__c , Sales_Order__r.Account__r.Internal_Name__c )</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>