force-app/main/default/objects/Option_Approval_Request__c/fields/Customer_Care_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Comment_Date__c</fullName>
    <label>Customer Care  Comment Date</label>
    <type>Date</type>
</CustomField>