force-app/main/default/objects/Option_Approval_Request__c/fields/Customer_Care_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Comments__c</fullName>
    <label>Customer Care Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>