force-app/main/default/objects/Option_Approval_Request__c/fields/Customer_Care_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Care Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>