force-app/main/default/objects/Option_Approval_Request__c/fields/Customer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Option Approval Requests</relationshipLabel>
    <relationshipName>Option_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>