force-app/main/default/objects/Option_Approval_Request__c/fields/Electrical_Engineering_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Engineering_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electrical Engineering Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>