force-app/main/default/objects/Option_Approval_Request__c/fields/Engineering__c.field-meta.xml
<CustomField>
    <fullName>Engineering__c</fullName>
    <label>Engineering Comment Date</label>
    <type>Date</type>
</CustomField>