force-app/main/default/objects/Option_Approval_Request__c/fields/Engineering_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Comments__c</fullName>
    <label>Engineering Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>