force-app/main/default/objects/Option_Approval_Request__c/fields/Engineering_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>