force-app/main/default/objects/Option_Approval_Request__c/fields/Final_Determination__c.field-meta.xml
<CustomField>
    <fullName>Final_Determination__c</fullName>
    <label>Final Determination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>