force-app/main/default/objects/Option_Approval_Request__c/fields/Mechanical_Engineering_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Engineering_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanical Engineering Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>