force-app/main/default/objects/Option_Approval_Request__c/fields/OAR_Name__c.field-meta.xml
<CustomField>
    <fullName>OAR_Name__c</fullName>
    <formula>&quot;OAR&quot; +&quot; &quot;+ RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2) +&quot;-&quot; + RIGHT(Name,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Approval Request Name</label>
    <type>Text</type>
</CustomField>