force-app/main/default/objects/Option_Approval_Request__c/fields/OAR_Status__c.field-meta.xml
<CustomField>
    <fullName>OAR_Status__c</fullName>
    <label>Product Strategy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Disapprove</fullName>
            </value>
            <value>
                <fullName>See Details</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>