force-app/main/default/objects/Option_Approval_Request__c/fields/OARtimelog__c.field-meta.xml
<CustomField>
    <fullName>OARtimelog__c</fullName>
    <inlineHelpText>The days taken to review OAR</inlineHelpText>
    <label>OAR time log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>