force-app/main/default/objects/Option_Approval_Request__c/fields/Opportunity_Line__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line</label>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipLabel>Option Approval Requests</relationshipLabel>
    <relationshipName>Option_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>