force-app/main/default/objects/Option_Approval_Request__c/fields/Option_Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Option_Request_Description__c</fullName>
    <label>Option Request Description</label>
    <type>TextArea</type>
</CustomField>