force-app/main/default/objects/Option_Approval_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Option Approval Requests</relationshipLabel>
    <relationshipName>Option_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>