force-app/main/default/objects/Option_Approval_Request__c/fields/Production_Comments__c.field-meta.xml
<CustomField>
    <fullName>Production_Comments__c</fullName>
    <label>Production Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>