force-app/main/default/objects/Option_Approval_Request__c/fields/Production_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Production_Recommendation__c</fullName>
    <label>Production Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Disapprove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>