force-app/main/default/objects/Option_Approval_Request__c/fields/Production_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Production_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>