force-app/main/default/objects/Option_Approval_Request__c/fields/Publication_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Comment_Date__c</fullName>
    <label>Publication Comment Date</label>
    <type>Date</type>
</CustomField>