force-app/main/default/objects/Option_Approval_Request__c/fields/Publications_Comments__c.field-meta.xml
<CustomField>
    <fullName>Publications_Comments__c</fullName>
    <label>Publications Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>