force-app/main/default/objects/Option_Approval_Request__c/fields/Publications_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Publications_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publications Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_RequestspDPt</relationshipName>
    <type>Lookup</type>
</CustomField>