force-app/main/default/objects/Option_Approval_Request__c/fields/Purchasing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Comments__c</fullName>
    <label>Purchasing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>