force-app/main/default/objects/Option_Approval_Request__c/fields/Purchasing_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>