force-app/main/default/objects/Option_Approval_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>Request date is the date this OAR is created and autofilled</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>