force-app/main/default/objects/Option_Approval_Request__c/fields/Review_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Status_Date__c</fullName>
    <description>The autopopulated date when the product strategy status changes to &quot;reviewing&quot; from flow</description>
    <inlineHelpText>Autofill Date when status turns reviewing</inlineHelpText>
    <label>Review Status Date</label>
    <type>Date</type>
</CustomField>