force-app/main/default/objects/Option_Approval_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Option Approval Requests</relationshipLabel>
    <relationshipName>Option_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>