force-app/main/default/objects/Option_Approval_Request__c/fields/Sales_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Recommendation__c</fullName>
    <label>Sales Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Disapprove</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>