force-app/main/default/objects/Option_Approval_Request__c/fields/Sales_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Option_Approval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>