force-app/main/default/objects/Option_Approval_Request__c/fields/Sales_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reviewer_Comments__c</fullName>
    <label>Sales Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>