force-app/main/default/objects/Option_Approval_Request__c/recordTypes/Customer_Specific.recordType-meta.xml
<RecordType>
    <fullName>Customer_Specific</fullName>
    <active>true</active>
    <label>Customer Specific</label>
</RecordType>