force-app/main/default/objects/Option_Approval_Request__c/recordTypes/General_Design.recordType-meta.xml
<RecordType>
    <fullName>General_Design</fullName>
    <active>true</active>
    <label>General Design</label>
</RecordType>