force-app/main/default/objects/Option_Approval_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OAR_Name__c</columns>
    <columns>Option_Request_Description__c</columns>
    <columns>OAR_Status__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Sales_Recommendation__c</columns>
    <columns>Build_Date__c</columns>
    <columns>Engineering_Recommendation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>