force-app/main/default/objects/Option_Approval_Request__c/listViews/Engineering_View.listView-meta.xml
<ListView>
    <fullName>Engineering_View</fullName>
    <columns>NAME</columns>
    <columns>OAR_Name__c</columns>
    <columns>OAR_Status__c</columns>
    <columns>Option_Request_Description__c</columns>
    <columns>Request_Details__c</columns>
    <columns>Compliance_Reviewer__c</columns>
    <columns>Compliance_Recommendation__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Build_Date__c</columns>
    <columns>Engineering_Recommendation__c</columns>
    <columns>Engineering_Comments__c</columns>
    <columns>Engineering_Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>Engineering View</label>
</ListView>