force-app/main/default/objects/Option_Approval_Request__c/listViews/OAR_Review_Meeting.listView-meta.xml
<ListView>
    <fullName>OAR_Review_Meeting</fullName>
    <columns>NAME</columns>
    <columns>OAR_Name__c</columns>
    <columns>OAR_Status__c</columns>
    <columns>Option_Request_Description__c</columns>
    <columns>Request_Details__c</columns>
    <columns>Engineering_Reviewer__c</columns>
    <columns>Engineering_Recommendation__c</columns>
    <columns>Compliance_Reviewer__c</columns>
    <columns>Compliance_Recommendation__c</columns>
    <columns>Purchasing_Reviewer__c</columns>
    <columns>Purchasing_Recommendation__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Build_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OAR_Status__c</field>
        <operation>equals</operation>
        <value>New,Reviewing</value>
    </filters>
    <label>OAR Review Meeting</label>
</ListView>